<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="title_section1">H O M E</string>
    <string name="title_section2">D I N I N G</string>
    <string name="title_section3">P R T</string>
    <string name="title_section4">B U S E S</string>
    <string name="title_section5">M A P</string>
    <string name="title_section6">N E W S</string>
    <string name="title_section7">E V E N T S</string>
    <string name="title_section8">H E L P</string>
    <string name="title_section9">S E T T I N G S</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="online">O N L I N E</string>
    <string name="yield">Y I E L D</string>
    <string name="offline">O F F L I N E</string>
    <string name="PRT_normal">The PRT is running on a normal schedule.</string>
    <string name="status">This\nis\na\nplaceholder</string>
    <string name="PRT_hours">Monday to Friday 6:30 AM to 10:15PM\n Saturday 9:30 AM to 5PM\n Sunday CLOSED</string>
    <string name="MenuPlaceholder">CONTENT\nNOT\nAVAILABLE\nAT THIS\nTIME</string>
    <string name="cafeevansdaleDescription">Cafe Evansdale is located in Brooke Tower and serves breakfast, lunch, and dinner.</string>
    <string name="cafeevansdalehours">Monday to Thursday 7:00 AM to 8:00 PM \nFriday 7:00 AM to 6:30 PM\nSaturday &amp; Holidays 9:00 AM to 6:30 PM\n Sunday 9:00 AM to 7:30 PM</string>
    <string name="summitcafeDescription">Summit Cafe is located in Summit Hall and serves breakfast, lunch, and dinner.</string>
    <string name="summithours">Monday to Friday 7:00 AM to 7:00 PM \nSaturday, Sunday, &amp; Holidays 11:00 AM \n to 6:30 PM</string>
    <string name="arnoldsdinerDescription">Arnold\'s Diner is located in Arnold Hall and serves breakfast, lunch, and dinner.</string>
    <string name="arnoldhours">Monday to Friday 7:00 AM to 10:00AM \nand 11:00 AM to 8:00 PM \nSaturday, Sunday, &amp; Holidays CLOSED</string>
    <string name="boremanbistroDescription">Boreman Bistro is located in Boreman Hall and serves breakfast, lunch, and dinner.</string>
    <string name="boremandhours">Monday to Friday 11:00 AM to 7:00 PM \nSaturday, Sunday, &amp; Holidays 9:00 AM to \n7:00 PM</string>
    <string name="terraceroomDescription">The Terrace Room is located in Stalnaker Hall and serves lunch and dinner.</string>
    <string name="terraceroomhours">Monday to Thursday 11:00 AM to 8:00 \nPM \nFriday 11:00 AM to 2:00 PM \nSaturday, Sunday, &amp; Holidays CLOSED</string>
    <string name="hatfieldsDescription">Hatfields is located in the Mountainlair and serves breakfast and lunch.</string>
    <string name="hatfieldsHours">Monday to Friday 7:15 AM to 10:00 PM \n and 11:00 AM to 2:00 PM \nSaturday, Sunday, &amp; Holidays CLOSED</string>
    <string name="businfo">All bus services seen here are powered by Mountain Line, the Morgantown public transit system. For more information visit busride.org.</string>
    <string name="busPlaceholderHours">This is a placeholder String.</string>
    <string name="busPlaceholderLocation">Placeholder</string>
    <string name="bus_l1Hours">Runs Thursday through Saturday 6:00 - 2:50 AM.</string>
    <string name="bus_l2Hours">Runs Monday through Saturday 6:00 PM - 12:00 AM.</string>
    <string name="bus_l3Hours">Runs Monday through Friday 8:00 AM - 5:40 PM and Saturday 9:00 AM - 5:40 PM.</string>
    <string name="bus_l4Hours">Runs Monday through Saturday 7:00 AM - 10:20 PM.</string>
    <string name="bus_l5Hours">Runs Monday through Saturday 6:00 AM - 5:15 PM.</string>
    <string name="bus_l6Hours">Runs Monday through Saturday 6:20 AM - 5:10 PM.</string>
    <string name="bus_l7Hours">Runs Monday through Saturday 6:30 AM - 5:10 PM.</string>
    <string name="bus_l8Hours">Runs Monday through Saturday 7:00 AM - 5:10 PM.</string>
    <string name="bus_l9Hours">Runs Monday through Saturday 6:00 AM - 5:10 PM.</string>
    <string name="bus_l10Hours">Runs Monday through Saturday 6:30 AM - 5:10 PM.</string>
    <string name="bus_l11Hours">Runs Monday through Saturday 7:00 AM - 5:15 PM.</string>
    <string name="bus_l12Hours">Runs Monday through Saturday 8:05 AM - 4:15 PM.</string>
    <string name="bus_l13Hours">Runs Monday through Saturday 9:10 AM - 3:05 PM.</string>
    <string name="bus_l14Hours">Runs Monday through Friday 7:40 AM - 4:20 PM and Saturday 7:00 AM - 5:10 PM</string>
    <string name="bus_l15Hours">Runs Monday through Saturday starting at 7:10 AM. Monday through Wednesday ends at 8:40 PM. Thursday through Saturday ends at 2:30 AM.</string>
    <string name="bus_l16Hours">Runs Monday through Friday 6:40 AM - 8:40 PM (6:20 PM Summer). Saturday 3:20 - 7:20 PM.</string>
    <string name="bus_l17Hours">Runs Monday through Friday 7:30 AM - 2:15 PM.</string>
    <string name="title_activity_dining"></string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_content1">Students who are experiencing a life threatening \nemergency should always call 911.</string>
    <string name="help_content2">If you or someone you know is feeling suicidal,\nthese hotlines can provide assistance.</string>
    <string name="help_content3">Provides a variety of psychological, psychiatric, and\ncounseling services including: individual, couples,\neducational, and career counseling.</string>
    <string name="settingsnightmode">Change the theme of WVU Mobile to a dark color scheme.</string>
    <string name="settingstwitter">If you would like to see more from us, please follow us on Twitter!</string>
    <string name="settingsfollow">You can also like and follow WVU Mobile on Facebook and Twitter!</string>
    <string name="settingsfeedback">Please send questions, suggestions, or bug reports to our email address.</string>
    <string name="registry_info">\nAll Buildings Listed \nAre Located In The \nWVU Building Registry\n\nThe Registry can be found at\nhttp://registrar.wvu.edu/building-key\n</string>
    <string name="title_activity_bus">BusActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
